--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -4,7 +4,9 @@
     <ion-menu-toggle menu="start">
       <ion-item lines="none">
         <ion-avatar slot="end">
-          <img src="https://images.unsplash.com/photo-1623016717281-2642f5142f99?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=300&q=80" alt="avatar">
+          <img
+            src="https://images.unsplash.com/photo-1623016717281-2642f5142f99?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=300&q=80"
+            alt="avatar">
         </ion-avatar>
         <ion-label class="ion-text-wrap">Peter Parker</ion-label>
       </ion-item>
@@ -14,15 +16,18 @@
 </ion-header>
 
 <ion-content>
-  <ion-list id="inbox-list">
-    <ion-list-header>Inbox</ion-list-header>
-    <ion-note>hi@ionicframework.com</ion-note>
-
-    <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-      <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-        <ion-icon  slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-        <ion-label>{{ p.title }}</ion-label>
-      </ion-item>
-    </ion-menu-toggle>
-  </ion-list>
+  <ion-menu-toggle auto-hide="false">
+    <ion-item lines="none" (click)="resetLikedProducts()">
+      <ion-icon slot="start" name="refresh-outline"></ion-icon>
+      <ion-label>Reset</ion-label>
+    </ion-item>
+    <ion-item lines="none" (click)="showLikedProducts()">
+      <ion-icon slot="start" name="heart-outline"></ion-icon>
+      <ion-label>Show liked products</ion-label>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-icon slot="start" name="happy-outline"></ion-icon>
+      <ion-label>Some button</ion-label>
+    </ion-item>
+  </ion-menu-toggle>
 </ion-content>
