--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,36 +1,54 @@
 <ion-header>
-  <app-header pageTitle="Home"></app-header>
+  <app-header pageTitle="Food Tinder"></app-header>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content>
+  <ng-container *ngIf="foodData">
+    <div class="cards-container" *ngIf="foodData.length > 0; else resetBtn">
+      <ion-card *ngFor="let card of foodData" [id]="card.id" class="card">
 
-  <div class="cards-container" *ngIf="foodData">
-    <ion-card *ngFor="let card of foodData" [id]="card.id" class="card" mode="ios">
+        <ng-container *ngIf="card.imageSet">
 
-      <ng-container *ngIf="card.imageSet">
+  <!--         if images gonna be more then 1 -->
+          <ion-slides [pager]="card.imageSet.length > 1" [options]="slideOps">
+            <ion-slide *ngFor="let item of card.imageSet">
+              <img [src]="item.url" [alt]="item.title">
+            </ion-slide>
+          </ion-slides>
+        </ng-container>
 
-<!--         if images gonna be more then 1 -->
-        <ion-slides [pager]="card.imageSet.length > 1">
-          <ion-slide *ngFor="let item of card.imageSet">
-            <img [src]="item.url" [alt]="item.title">
-          </ion-slide>
-        </ion-slides>
-      </ng-container>
+        <ion-card-header>
+          <ion-card-title>{{ card.name }}</ion-card-title>
+          <ion-buttons class="buttons-container">
+            <ion-button size="large" color="success" (click)="likeDislikeFood(card, true)">
+              <ion-icon slot="icon-only" name="heart-outline"></ion-icon>
+            </ion-button>
+            <ion-button size="large" color="danger" (click)="likeDislikeFood(card, false)">
+              <ion-icon slot="icon-only" name="heart-dislike-outline"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+        </ion-card-header>
+      </ion-card>
+    </div>
 
-      <ion-card-header>
-        <ion-card-title>{{ card.name }}</ion-card-title>
-        <ion-buttons class="buttons-container">
-          <ion-button size="large" color="success" (click)="likeDislikeFood(card, true)">
-            <ion-icon slot="icon-only" name="heart-outline"></ion-icon>
-          </ion-button>
-          <ion-button size="large" color="danger" (click)="likeDislikeFood(card, false)">
-            <ion-icon slot="icon-only" name="heart-dislike-outline"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-card-header>
-    </ion-card>
-  </div>
+    <ng-template #resetBtn>
+      <ion-list>
+        <ion-item>
+          <ion-label>No more products for you, try again later</ion-label>
+        </ion-item>
 
-
-
+      </ion-list>
+    </ng-template>
+  </ng-container>
 </ion-content>
+
+
+<ion-footer collapse="fade">
+  <ion-toolbar>
+    <ion-icon name="arrow-back-outline" slot="start" size="large"></ion-icon>
+    <ion-title>
+      Try to Swipe
+    </ion-title>
+    <ion-icon name="arrow-forward-outline" slot="end" size="large"></ion-icon>
+  </ion-toolbar>
+</ion-footer>
