--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,32 +4,45 @@
 
 <ion-content scroll-y="false">
   <ng-container *ngIf="foodData">
-    <div class="cards-container" *ngIf="foodData.length > 0; else resetBtn">
-      <ion-card *ngFor="let card of foodData" [id]="card.id" class="card">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="0" size-lg="4"></ion-col>
+        <ion-col size="12" size-lg="4">
 
-        <ng-container *ngIf="card.imageSet">
+          <div class="cards-container" *ngIf="foodData.length > 0; else resetBtn">
+            <ion-card *ngFor="let card of foodData" [id]="card.id" class="card">
 
-  <!--         if images gonna be more then 1 -->
-          <ion-slides [pager]="card.imageSet.length > 1" [options]="slideOps">
-            <ion-slide *ngFor="let item of card.imageSet">
-              <img [src]="item.url" [alt]="item.title">
-            </ion-slide>
-          </ion-slides>
-        </ng-container>
+              <ng-container *ngIf="card.imageSet">
 
-        <ion-card-header>
-          <ion-card-title>{{ card.name }}</ion-card-title>
-          <ion-buttons class="buttons-container">
-            <ion-button size="large" color="success" (click)="likeDislikeFood(card, true)">
-              <ion-icon slot="icon-only" name="heart-outline"></ion-icon>
-            </ion-button>
-            <ion-button size="large" color="danger" (click)="likeDislikeFood(card, false)">
-              <ion-icon slot="icon-only" name="heart-dislike-outline"></ion-icon>
-            </ion-button>
-          </ion-buttons>
-        </ion-card-header>
-      </ion-card>
-    </div>
+                <!--         if images gonna be more then 1 -->
+                <ion-slides [pager]="card.imageSet.length > 1" [options]="slideOps">
+                  <ion-slide *ngFor="let item of card.imageSet">
+                    <img [src]="item.url" [alt]="item.title">
+                  </ion-slide>
+                </ion-slides>
+              </ng-container>
+
+              <ion-card-header>
+                <ion-card-title>{{ card.name }}</ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-buttons class="buttons-container">
+                  <ion-button size="large" color="success" (click)="likeDislikeFood(card, true)">
+                    <ion-icon slot="icon-only" name="heart-outline"></ion-icon>
+                  </ion-button>
+                  <ion-button size="large" color="danger" (click)="likeDislikeFood(card, false)">
+                    <ion-icon slot="icon-only" name="heart-dislike-outline"></ion-icon>
+                  </ion-button>
+                </ion-buttons>
+              </ion-card-content>
+            </ion-card>
+          </div>
+
+        </ion-col>
+        <ion-col size="0" size-lg="4"></ion-col>
+      </ion-row>
+    </ion-grid>
+
 
     <ng-template #resetBtn>
       <ion-list>
