--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -6,6 +6,9 @@
     position: absolute;
     width: -webkit-fill-available;
     z-index: 10;
+    height: 75vh;
+    display: flex;
+    flex-direction: column;
 
     img {
       width: 100%;
@@ -13,10 +16,18 @@
       background-color: #fff;
     }
 
-    .buttons-container {
+    ion-card-content {
+      flex-grow: 3;
       display: flex;
-      justify-content: space-evenly;
-      margin-top: 10px;
+      flex-direction: column;
+      align-items: center;
+      justify-content: end;
+
+      .buttons-container {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+      }
     }
   }
 }
