--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -6,8 +6,8 @@
   <ng-container *ngIf="foodData">
     <ion-grid>
       <ion-row>
-        <ion-col size="0" size-lg="4"></ion-col>
-        <ion-col size="12" size-lg="4">
+        <ion-col size="0" size-sm="3" size-xl="4"></ion-col>
+        <ion-col size="12" size-sm="6" size-xl="4">
 
           <div class="cards-container" *ngIf="foodData.length > 0; else resetBtn">
             <ion-card *ngFor="let card of foodData" [id]="card.id" class="card">
@@ -39,7 +39,7 @@
           </div>
 
         </ion-col>
-        <ion-col size="0" size-lg="4"></ion-col>
+        <ion-col size="0" size-sm="3" size-xl="4"></ion-col>
       </ion-row>
     </ion-grid>
 
